--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "devDependencies": {
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-conventional": "^19.2.2",
-    "husky": "^9.0.11"
+    "autoprefixer": "^10.4.19",
+    "husky": "^9.0.11",
+    "postcss": "^8.4.38",
+    "postcss-cli": "^11.0.0"
   }
 }
